[修復]修正錯誤修復
